--- a/MesCode/hosts.yml
+++ b/MesCode/hosts.yml
@@ -1,1 +1,4 @@
-localhost ansible_connection=local
+##localhost ansible_connection=local
+
+[all]
+myserver ansible_host=127.0.0.1 ansible_user=omy ansible_connection=local
