--- a/hosts.yml
+++ b/hosts.yml
@@ -1,4 +1,4 @@
 ##localhost ansible_connection=local
 
 [all]
-myserver ansible_host=127.0.0.1 ansible_user=omy ansible_connection=local ansible_password=omy
+myserver ansible_host=127.0.0.1 ansible_user=omy ansible_connection=local ansible_become_password=omy
